--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- LEFT SIDE -->
     <div class="contact-left">
-      <h2>Get in Touch</h2>
+      <h2>To Contact</h2>
       <p class="subtitle">I’d like to hear from you!</p>
 
       <p class="contact-desc">
