--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <a href="https://www.facebook.com/boldj.poudel" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/boldjpoudel/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://github.com/Boldjpoudel" target="_blank"><i class="fab fa-github"></i></a>
-
-        <a href="photos/Bold.png" download class="btn-cv" title="Download CV">📄</a>
+        <a href="photos/Bold Jung Poudel CV.pdf"target="_blank" rel="noopener noreferrer"class="btn-cv"title="Open CV">📄</a>
       </div>
     </div>
 
