--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
       </div>
 
       <div class="contact-socials">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/boldj.poudel"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://github.com/Boldjpoudel"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/boldjpoudel/"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
